--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@ body { font-size: x-large; }
 <li><a href=template/?to=e@example.com>Customer E</li>
 <li><a href=template/?to=f@example.com>Customer F</li>
 </ul>
+
+<p><a href=https://github.com/kaihendry/mailto-template>Source code</a></p>
